# processing-cpp

./: .tdlist  CMakeLists.txt  INSTALL  INSTALL.sh  README.md
include/: FindSOIL.cmake  circle.h  fragment.frag  pcircle.h  pline.h  pquad.h  program.h  pshader.h  psketch.h  putils.h  quad.h  sketch.h  vertex.vert
include/shaders/: line.frag  line.vert  main.frag  main.vert  point.frag  point.vert
src/: PImage.cpp  PImage.h  circle.cpp  pcircle.cpp  pline.cpp  pquad.cpp  program.cpp  pshader.cpp  psketch.cpp  putils.cpp  quad.cpp  sketch.cpp
src/core/: PCFunctions.cpp  PCFunctions.h  PCQuad.cpp  PCQuad.h  PCShaderProgram.cpp  PCShaderProgram.h  PCShape.cpp  PCShape.h  PCSketch.cpp  PCSketch.h  PCTriangle.cpp  PCTriangle.h  Settings.h  framebuffer.frag  framebuffer.vert  main.cpp  shader.frag  shader.vert
src/test/: Sketch.cpp  Sketch.h
test/: CMakeLists.txt
test/include/: customSketch.h  sketch.h
test/src/: customSketch.cpp  main.cpp  sketch.cpp
